--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,7 +1,7 @@
 body{
 		margin: 0;
 
-		background-image: url("artstudent.jpg");
+		background-image: url("images/artstudent.jpg");
 		background-repeat: no-repeat;
 		 background-attachment: fixed;
  		 background-size: cover;
