--- a/artwork.css
+++ b/artwork.css
@@ -1,7 +1,5 @@
-<!--Navigation bar-->
 
-    <title> Sophia Martinez </title>
-<style>
+
 body {
   background-color: #f0f0f0;
   font-family: arial;
@@ -33,22 +31,6 @@ body {
   }
 }
 
-</style>
-  </head>
-
-<h1 class="glow">Sophia Martinez</h1>
-    <div class="navbar">
-      <ul class="navlist">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
-      </ul>
-    </div>
-  </body>
-  <!--end of Nav bar-->
-
 body{
 		margin: 0;
 }
@@ -71,7 +53,7 @@ a:hover{
 		background: #284472
 }
 
-/*.navbar{
+.navbar{
 		background: #e3dce2;
 }
 
@@ -83,4 +65,4 @@ a:hover{
 .navbar a.active {
   background-color: #4CAF50;
   color: white;
-}*/
+}
