fixing artwork layout

--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ a{
   padding-bottom: 30px;
   text-align: center;
 }
-.portfolio h2{
+/*.portfolio h2{
   font-family: "Quicksand", Arial, sans-serif;
   padding: 20px 0 ;
-}
+}*/
 .portfolio .our-work {
   overflow: hidden;
 }
