--- a/style.css
+++ b/style.css
@@ -29,16 +29,16 @@ a{
   overflow: hidden;
 }
 
-.portfolio .our-work>div {
-  float: left;
+/*.portfolio .our-work>div {
+  float: none;
   width: 30%;
-  margin-bottom: 10px;
-}
+  margin-bottom: 5px;
+}*/
 
 .portfolio .our-work>div img {
   width: 70%;
-  margin: 10px;
-  padding: 3px;
+  margin: 5px;
+  padding: 0px;
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0px 10px 10px #ccc;
