--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a{
 }*/
 
 .portfolio .our-work>div img {
-  width: 70%;
+  width: 50%;
   margin: 5px;
   padding: 0px;
   background-color: #fff;
@@ -53,7 +53,7 @@ a:hover{
 }
 
 .navlist{
-	display: inline-flex;
+	display: inline-block;
 	list-style-type: none;
 }
 
