--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a{
 .portfolio .our-work>div img {
   width: 70%;
   margin: 5px;
-  padding: 0px;
+  padding: 5px;
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0px 10px 10px #ccc;
@@ -53,7 +53,7 @@ a:hover{
 }
 
 .navlist{
-	display: inline-block;
+	display: inline-flex;
 	list-style-type: none;
 }
 
