--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@ a{
 	color:white;
 }
 
+.container {
+    width: 200px;
+    height: 120px;
+}
+
+/* Resize images */
+.container img {
+    width: 100%;
+    height: auto;
+}
+
 .portfolio {
   padding-top: 30px;
   padding-bottom: 30px;
