--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,28 @@
+*{
+	margin: 0;
+	padding:0;
+	font-family: sans-serif;
+}
+.main{
+	position: relative;
+	height: 100vh;
+	width: 100%;
+
+}
+.main p{
+	position: relative;
+	height: auto;
+	width: 100%;
+	margin:5% 0 2% 0;
+	text-align: center;
+	font-size: 3em;
+	font-weight: 650;
+	letter-spacing: 1.5px;
+	color: black;
+	border-left: 5px solid black;
+	border-right: 5px solic black;
+	background: #f0e1ea;
+}
 
 li {
   float: center;
