--- a/indexstyle.css
+++ b/indexstyle.css
@@ -15,33 +15,23 @@
 	width: 100%;
 	margin:5% 0 2% 0;
 	text-align: center;
-	font-size: 3em;
-	font-weight: 650;
-	letter-spacing: 1.5px;
+	font-size: 1.8em;
+	font-weight: 500;
+	letter-spacing: 1px;
 	color: black;
 	border-left: 5px solid black;
-	border-right: 5px solic black;
+	border-right: 5px solid black;
 	background: #f0e1ea;
 }
 
-li {
-  float: center;
+.main .gallery{
+		position: relative;
+		height: auto;
+		width: 90%;
+		margin: auto;
+		padding: 45px 0;
 }
 
-.container {
-	display: grid;
-  	justify-content: space-evenly;  
-	grid-template-columns: 50px 50px 50px 50px;
-  	grid-template-rows: auto;
-	
-}
-
-.content {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 10px;
-}
 
 
 a{
