--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,22 +1,37 @@
+*{
+	margin: 0;
+	padding:0;
+	font-family: sans-serif;
+}
+.main{
+	position: relative;
+	height: 100vh;
+	width: 100%;
 
-li {
-  float: center;
+}
+.main p{
+	position: relative;
+	height: auto;
+	width: 100%;
+	margin:5% 0 2% 0;
+	text-align: center;
+	font-size: 1.8em;
+	font-weight: 500;
+	letter-spacing: 1px;
+	color: black;
+	border-left: 5px solid black;
+	border-right: 5px solid black;
+	background: #f0e1ea;
 }
 
-.container {
-	display: grid;
-  	justify-content: space-evenly;  
-	grid-template-columns: 50px 50px 50px 50px;
-  	grid-template-rows: auto;
-	
+.main .gallery{
+		position: relative;
+		height: auto;
+		width: 90%;
+		margin: auto;
+		padding: 45px 0;
 }
 
-.content {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 10px;
-}
 
 
 a{
