--- a/indexstyle.css
+++ b/indexstyle.css
@@ -26,13 +26,15 @@
 
 .main .gallery{
 		position: relative;
-		height: auto;
+		height: 100%;
 		width: 90%;
 		margin: auto;
 		padding: 45px 0;
 		display: grid;
 		grid-template-columns: auto auto auto;
-		 
+		grid-gap: 2vmin;
+		grid-auto-flow: dense;
+
 }
 .main .gallery .img{
 	position:relative
