--- a/indexstyle.css
+++ b/indexstyle.css
@@ -32,7 +32,7 @@
 		padding: 45px 0;
 		display: grid;
 		grid-template-columns: auto auto auto;
-		grid-gap: 2vmin;
+		grid-gap: 2vh;
 		grid-auto-flow: dense;
 
 }
@@ -41,6 +41,7 @@
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
+	border-radius: 2px;
 }
 
 .main .gallery .img img{
@@ -50,21 +51,12 @@
 	filter: brightness(0.5) grayscale(100);
 	border-radius: 2px;
 	transition: 0.3s ease-in-out;
+}
 
 .main .gallery .img:hover img{
 	filter: brightness(1) grayscale(0);
 }
 
-a{
-	text-decoration: none;
-	font-size:20px;
-	padding: 18px;
-	color:white;
-}
-
-a:hover{
-		background: #284472
-}
 
 .navbar{
 		background: #dba4d3;
