--- a/indexstyle.css
+++ b/indexstyle.css
@@ -57,6 +57,16 @@
 	filter: brightness(1) grayscale(0);
 }
 
+a{
+	text-decoration: none;
+	font-size:20px;
+	padding: 18px;
+	color:white;
+}
+
+a:hover{
+		background: #284472
+}
 
 .navbar{
 		background: #dba4d3;
