--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,96 +1,12 @@
-body {
-background-color: #f0e1ea;
-  font-family: arial;
-}
-
-.content {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 10px;
-} 
-
-
-*{
-	margin: 0;
+body{
+	margin:20px;
 	padding:0;
-	font-family: sans-serif;
+	text-align:center;
 }
-.main{
-	position: relative;
-	height: 50%;
-	width: 50%;
+.container{
+	display:grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: 100px 300px;
+	grid-gap: 10px;
 
-}
-.main p{
-	position: relative;
-	height: 50%;
-	width: 50%;
-	margin:5% 0 2% 0;
-	text-align: center;
-	font-size: 1.8em;
-	font-weight: 500;
-	letter-spacing: 1px;
-	color: black;
-	border-left: 5px solid black;
-	border-right: 5px solid black;
-	background: #f0e1ea;
-}
-
-.main .gallery{
-		position: relative;
-		height: auto;
-		width: 90%;
-		margin: auto;
-		padding: 45px 0;
-		display: grid;
-		grid-template-columns: auto auto auto;
-		grid-gap: 2vh;
-		grid-auto-flow: dense;
-
-}
-.main .gallery .img{
-	position:relative
-	height: 50%;
-	width: 50%;
-	overflow: hidden;
-	border-radius: 2px;
-}
-
-.main .gallery .img img{
-	height: 50%;
-	width: 50%;
-	object-fit: cover;
-	filter: brightness(0.5) grayscale(100);
-	border-radius: 2px;
-	transition: 0.3s ease-in-out;
-}
-
-.main .gallery .img:hover img{
-	filter: brightness(1) grayscale(0);
-}
-
-a{
-	text-decoration: none;
-	font-size:20px;
-	padding: 18px;
-	color:white;
-}
-
-a:hover{
-		background: #284472
-}
-
-.navbar{
-		background: #dba4d3;
-}
-
-.navlist{
-	display: inline-flex;
-	list-style-type: none;
-}
-
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
 }
