--- a/indexstyle.css
+++ b/indexstyle.css
@@ -10,3 +10,22 @@ body{
 	grid-gap: 10px;
 
 }
+
+.gallery-item{
+		width:60%;
+		height:60%;
+		position: relative;
+		
+}
+
+.gallery-item .image{
+	width:100%;
+	height:100%;
+	overflow: hidden;
+}
+
+.gallery-item .image img{
+	width:100%;
+	height:100%;
+	object-fit: cover;
+}
