--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,9 +5,9 @@ body{
 }
 .container{
 	display:grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(5, 1fr);
 	grid-auto-rows: 100px 300px;
-	grid-gap: 10px;
+	grid-gap:10px;
 
 }
 
@@ -28,4 +28,5 @@ body{
 	width:100%;
 	height:100%;
 	object-fit: cover;
+	object-position: 50% 50%;
 }
