--- a/indexstyle.css
+++ b/indexstyle.css
@@ -29,4 +29,11 @@ body{
 	height:100%;
 	object-fit: cover;
 	object-position: 50% 50%;
+	cursor:pointer;
+	transition:.5s ease-in-out;
+}
+
+.gallery-item:hover .image img{
+		transform:scale(1.5);
+		
 }
