--- a/indexstyle.css
+++ b/indexstyle.css
@@ -8,6 +8,7 @@ body{
 	grid-template-columns: repeat(5, 1fr);
 	grid-auto-rows: 100px 300px;
 	grid-gap:10px;
+	grid-auto-flow: dense;
 
 }
 
@@ -35,5 +36,5 @@ body{
 
 .gallery-item:hover .image img{
 		transform:scale(1.5);
-		
 }
+
