--- a/artwork.css
+++ b/artwork.css
@@ -1,4 +1,5 @@
 body{
+  background-color: white;
   margin:20px;
   padding:0;
   text-align:center;
@@ -73,4 +74,8 @@ a:hover{
 .navbar a.active {
   background-color: #4CAF50;
   color: white;
+}
+
+p {
+  background-color:;
 }
