--- a/indexstyle.css
+++ b/indexstyle.css
@@ -16,13 +16,15 @@ h2{
 .column{
 	float:left;
 	width:33.33%;
+	float:right;
+	width:33.33%;
 }
 
 
 .container{
 	display:grid;
 	grid-template-columns: repeat(5, 1fr);
-	grid-auto-rows: 100px 300px;
+	grid-auto-rows: 300px 300px;
 	grid-gap:10px;
 	grid-auto-flow: dense;
 
