--- a/artwork.css
+++ b/artwork.css
@@ -1,3 +1,8 @@
+div {
+  padding-bottom: 50px;
+  
+}
+
 body{
   background-color: white;
   margin:20px;
@@ -88,7 +93,7 @@ a:hover{
 }
 
 p.ex1 {
-  margin-left: 30px;
-  margin-right: 30px
+  margin-left: 200px;
+  margin-right: 200px
 
 }
