--- a/artwork.css
+++ b/artwork.css
@@ -2,7 +2,7 @@
 body{
   background-color: white;
   margin:20px;
-  padding:10px;
+  padding:none;
   text-align:center;
   color: #b56791;
   font-family: monospace, sans-serif;
