--- a/style.css
+++ b/style.css
@@ -44,20 +44,34 @@ li {
   overflow: hidden;
 }
 
+a{
+  text-decoration: none;
+  font-size:20px;
+  padding: 18px;
+  color:white;
+}
+
 a:hover{
-		background: #284472
+    background: #284472
 }
 
 .navbar{
-		background: #dba4d3;
+    background: #dba4d3;
 }
 
 .navlist{
-	display: inline-flex;
-	list-style-type: none;
+  display: inline-flex;
+  list-style-type: none;
 }
 
 .navbar a.active {
   background-color: #4CAF50;
   color: white;
+}
+
+p.ex1 {
+  margin-left: 200px;
+  margin-right: 200px
+
+}
 }
