--- a/artwork.css
+++ b/artwork.css
@@ -88,6 +88,13 @@ a:hover{
   color: white;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 p.ex1 {
   margin-left: 200px;
   margin-right: 200px
