--- a/artwork.css
+++ b/artwork.css
@@ -6,7 +6,7 @@ body{
   text-align:center;
   color: #b56791;
   font-family: monospace, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 h2{
@@ -66,7 +66,7 @@ h2{
 a{
   text-decoration: none;
   font-size:20px;
-  padding: none;
+  padding: 3px;
   color:white;
 }
 
